--- a/deck.mdx
+++ b/deck.mdx
@@ -463,7 +463,7 @@ Any</span></span>
 <li>Look at the result type:</li>
 <center>
 <span style="font-family: Fira
-Mono; border: dashed 2px black;"><span style="color:
+Mono; background-color: #e4f6bd;"><span style="color:
 #00a2b3;">T?</span> => String</span>
 </center>
 <li>
@@ -471,7 +471,7 @@ Mono; border: dashed 2px black;"><span style="color:
 <center>
 <span style="font-family: Fira Mono;"><span
 style="color:#00a2b3;">T?</span> <span style="color: #930077;">:=&nbsp;
-<span style="border: dashed 2px black;">Any</span></span></span>
+<span style="background-color: #e4f6bd;">Any</span></span></span>
 </center>
 </ol>
 
@@ -499,13 +499,17 @@ Any</span></span>
 <li>Look at the result type:</li>
 <center>
 <span style="font-family: Fira
-Mono; border: dashed 2px black;"><span style="color:
-#00a2b3;">T?</span> => T?</span>
+Mono; background-color: #e4f6bd;"><span style="color:
+#00a2b3;">T?</span> => <span style="color: #00a2b3;">T?</span></span>
 </center>
 <Appear>
 <li>
 <b>Delay</b> the <span style="color:
-#930077;">instantiation</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br/>&nbsp;</li>
+#930077;">instantiation</span>.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br/>
+<center>
+<span style="font-family: Fira Mono; background-color: #e4f6bd;">¯\_(ツ)_/¯</span>
+</center>
+</li>
 </Appear>
 </ol>
 
