--- a/deck.mdx
+++ b/deck.mdx
@@ -812,20 +812,45 @@ new Foo2()   // T? =: Null
 
 ```scala
 def foo[T](x: T)(implicit ev: Foo[T]): …
-
-foo[T?](a)
 ```
+<br/>
+<span style="font-family: Fira Mono;">foo<span style="color:
+#91b029;">[</span><span style="color: #00a2b3;">T?</span><span style="color:
+#91b029;">]</span>(1)</span>
 
-Should we force the instantiation of `T?` before doing the implicit search ?
-
-
-- Do implicit search with tvars in type: ambiguous
-- Do implicit search with all tvars instantiated: too restrictive
-- Do implicit search with all previously constrained tvars instantiated: OK!
+Should we <b>force</b> the <span style="color: #930077;">instantiation</span> of <span style="font-family: Fira Mono; color: #00a2b3;">T?</span> <b>before</b> doing the implicit search ?
 
 ---
 
-# Attempt 1: force instantation of all tvars
+# Attempt 1: Don't force anything
+
+```scala
+def foo[T](x: T)(implicit ev: Foo[T]): …
+
+implicit val a: Foo[Int] = …
+implicit val b: Foo[Any] = …
+```
+<br/>
+<span style="font-family: Fira Mono;">foo<span style="color:
+#91b029;">[</span><span style="color: #00a2b3;">T?</span><span style="color:
+#91b029;">]</span>(1)</span>
+
+<ul>
+<Appear>
+<li>
+<span style="font-family: Fira Mono;">
+<span style="color: #00a2b3;">T?</span> <span style="color: #ff80ae;">&gt;: Int</span>
+</span>
+</li>
+<li>
+Both <span style="font-family: Fira Mono;">a</span> and <span style="font-family: Fira Mono;">b</span> match the type: ambiguous implicits!
+</li>
+</Appear>
+</ul>
+
+---
+
+# Attempt 2: Force all type variables
 
 Usually fine, except when encoding **functional dependencies**:
 
@@ -839,13 +864,13 @@ Matrix * Int    => Matrix
 ---
 
 ```scala
-trait MultDep[A, B, C] {
+trait Mult[A, B, C] {
   def apply(a: A, b: B): C
 }
-implicit object mmm extends MultDep[Matrix, Matrix, Matrix] {
+implicit object mmm extends Mult[Matrix, Matrix, Matrix] {
   def apply(a: Matrix, b: Matrix): Matrix = …
 }
-implicit object mvv extends MultDep[Matrix, Vector, Vector] {
+implicit object mvv extends Mult[Matrix, Vector, Vector] {
   def apply(a: Matrix, b: Vector): Vector = …
 }
 ```
@@ -854,7 +879,7 @@ implicit object mvv extends MultDep[Matrix, Vector, Vector] {
 
 ```scala
 def mult[A, B, C](a: A, b: B)(
-  implicit ev: MultDep[A, B, C]): C = ev(a, b)
+  implicit ev: Mult[A, B, C]): C = ev(a, b)
 
 mult(matrix1, matrix2) // : Matrix
 mult(matrix1, vector1) // : Vector
@@ -863,56 +888,94 @@ mult(matrix1, vector1) // : Vector
 
 ```scala
 def mult[A, B, C](a: A, b: B)(
-  implicit ev: MultDep[A, B, C]): C = ev(a, b)
+  implicit ev: Mult[A, B, C]): C = ev(a, b)
 
 ```
 
-- mult[?A, ?B, ?C](matrix1, vector1)
-- ?A >: Matrix
-- ?B >: Vector
-- ?C >: Nothing <: Any
-- Implicit search for MultDep[?A, ?B, ?C]
-- After instantiation: MultDep[Matrix, Vector, Nothing]
-- Implicit not found!
-
----
-
-# Attempt 2: Keep type variables as-is
-
-- Directly do an implicit search for `MultDep[?A, ?B, ?C]`
-- `mvv <: MultDep[?A, ?B, ?C]`
-- `MultDep[Matrix, Vector, Vector] <: MultDep[?A, ?B, ?C]`
-- `?A := Matrix, ?B := Vector, ?C := Vector`
-- Pick `mvv`
-
----
-
-```scala
-def foo[T](x: T)(implicit ev: Foo[T]): …
-
-implicit val a: Foo[Int] = …
-implicit val b: Foo[Any] = …
-
-foo(1)
-```
-
-- T? >: Int
-- Both `a` and `b` match the type: ambiguous implicit!
+<ul>
+<Appear>
+<li>
+<span style="font-family: Fira Mono;">
+mult<span style="color:
+#91b029;">[</span><span style="color:#00a2b3;">?A</span>, <span style="color:#00a2b3;">?B</span>, <span style="color:#00a2b3;">?C</span><span style="color:
+#91b029;">]</span>(matrix1, vector1)
+</span>
+</li>
+<li>
+<span style="font-family: Fira Mono;">
+<span style="color:#00a2b3;">?A</span> <span style="color: #ff80ae;">&gt;: Matrix</span>
+</span>
+</li>
+<li>
+<span style="font-family: Fira Mono;">
+<span style="color:#00a2b3;">?B</span> <span style="color: #ff80ae;">&gt;: Vector</span>
+</span>
+</li>
+<li>
+<span style="font-family: Fira Mono;">
+<span style="color:#00a2b3;">?C</span> unconstrained (<span style="color: #ff80ae;">&gt;: Nothing &lt;: Any</span>)
+</span>
+</li>
+<li>Implicit search for <span style="font-family: Fira Mono;">Mult[<span
+style="color:#00a2b3;">?A</span>, <span style="color:#00a2b3;">?B</span>, <span
+style="color:#00a2b3;">?C</span>]</span></li>
+<li><span style="color: #930077;">Instantiate</span> all variables: <br/><span style="font-family: Fira Mono; color: #930077;">Mult[Matrix, Vector, Nothing]</span>
+</li>
+<li>Implicit not found! 🤦</li>
+</Appear>
+</ul>
 
 ---
 
 # Solution
 
-- Only instantiate constrained type variables!
-- mult[?A, ?B, ?C](matrix1, vector1)
-- ?A >: Matrix
-- ?B >: Vector
-- ?C unconstrained
-- Implicit search for MultDep[Matrix, Vector, ?C]
-- `mvv <: MultDep[Matrix, Vector, ?C]`
-- `MultDep[Matrix, Vector, Vector] <: MultDep[?A, ?B, ?C]`
-- `?C := Vector`
-- Pick `mvv`
+<ul>
+<Appear>
+<li>
+We should only instantiate <b style="color: #ff80ae;">constrained</b> <span style="color:#00a2b3;">type variables</span>!
+</li>
+<li>
+mult<span style="color:
+#91b029;">[</span><span style="color:#00a2b3;">?A</span>, <span style="color:#00a2b3;">?B</span>, <span style="color:#00a2b3;">?C</span><span style="color:
+#91b029;">]</span>(matrix1, vector1)
+</li>
+<li>
+<span style="font-family: Fira Mono;">
+<span style="color:#00a2b3;">?A</span> <span style="color: #ff80ae;">&gt;: Matrix</span>
+</span>
+</li>
+<li>
+<span style="font-family: Fira Mono;">
+<span style="color:#00a2b3;">?B</span> <span style="color: #ff80ae;">&gt;: Vector</span>
+</span>
+</li>
+<li>
+<span style="font-family: Fira Mono;">
+<span style="color:#00a2b3;">?C</span> unconstrained (<span style="color: #ff80ae;">&gt;: Nothing &lt;: Any</span>)
+</span>
+</li>
+<li>Implicit search for <br/><span style="font-family: Fira Mono; color: #930077;">Mult[Matrix, Vector, <span style="color:#00a2b3;">?C</span>]</span>
+</li>
+<li>
+<span style="font-family: Fira Mono;">
+mvv &lt;: Mult[Matrix, Vector, <span style="color:#00a2b3;">?C</span>]
+</span>
+</li>
+<li>
+<span style="font-family: Fira Mono;">
+Mult[Matrix, Vector, Vector] &lt;: <br/>Mult[Matrix, Vector, <span style="color:#00a2b3;">?C</span>]
+</span>
+</li>
+<li>
+<span style="font-family: Fira Mono;">
+<span
+style="color:#00a2b3;">C?</span> <span style="color: #930077;">:=
+Vector</span>
+</span>
+</li>
+<li>No other matching implicit: success!</li>
+</Appear>
+</ul>
 
 ---
 
